--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ input[type=text] {
 
 input[type=button] {
   height: 60px;
-  width: 65%;
+  width: calc(60% + 34px);
   margin: 10px 0;
   background-color: #f19953;
   color: white;
